--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,37 @@
-version: "3.7"
+version: "3"
 
 services:
     db:
-        build: postgres_db
-        healthcheck:
-          test: [ "CMD", "pg_isready", "-q", "-d", "${POSTGRES_DB}", "-U", "postgres" ]
-          timeout: 45s
-          interval: 10s
-          retries: 10
+      image: postgres
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+      volumes:
+      - ./postgres_db/pg_init.sh:/docker-entrypoint-initdb.d/pg_init.sh
+      ports:
+      - "5432:5432"
+      expose:
+      - "5432"
     
     web:
         build: frontend
         ports:
-          - 80:80
+          - 3000:3000
         depends_on:
           - api
+        stdin_open: true
+        tty: true
+        # volumes:
+        #   - ./frontend:app
+        #   - ./app/node_modules
 
     api:
         build: backend
         environment:
-          - PORT=80
           - DB_HOST=db
+        ports:
+          - 8000:8000
         depends_on:
-          db:
-            condition: service_healthy
+          - db
+          
+
