--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,11 @@ COPY package.json .
 
 RUN npm install
 
+RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
+
 COPY . .
 
 EXPOSE 3000
+
 
 CMD ["npm", "start"]
