--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "react-bootstrap": "^2.2.3", 
+    "bootstrap":"^5.1.3",
+    "react-router-dom":"^6.3.0",
+    "axios":"^0.26.1"
   },
   "scripts": {
     "start": "react-scripts start",
