--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,55 @@
 version: "3"
 
 services:
-    db:
-      image: postgres
-      environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
-      volumes:
+
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    volumes:
       - ./postgres_db/pg_init.sh:/docker-entrypoint-initdb.d/pg_init.sh
-      ports:
+    ports:
       - "5432:5432"
-      expose:
+    expose:
       - "5432"
-      
-    pg_admin:
-      container_name: pgadmin4
-      image: dpage/pgadmin4:latest
-      restart: always
-      ports:
-        - "5050:80"
-      environment:
-        - PGADMIN_DEFAULT_EMAIL=postgres@gmail.com
-        - PGADMIN_DEFAULT_PASSWORD=postgres
-      depends_on:
-        - db   
-    web:
-        build: frontend
-        environment:
-           CHOKIDAR_USEPOLLING: "true"
-        ports:
-          - "3000:3000"
-        stdin_open: true
-        tty: true
-        volumes:
-          - ./frontend:/app
-          - /app/node_modules
-        depends_on:
-          - api
 
-    api:
-        build: backend
-        environment:
-          - DB_HOST=db
-        ports:
-          - 8000:8000
-        depends_on:
-          - db
-          
+  pg_admin:
+    container_name: pgadmin4
+    image: dpage/pgadmin4:latest
+    restart: always
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=postgres@gmail.com
+      - PGADMIN_DEFAULT_PASSWORD=postgres
+    depends_on:
+      - db
 
+  web:
+    build: frontend
+    environment:
+      CHOKIDAR_USEPOLLING: "true"
+    ports:
+      - "3000:3000"
+    stdin_open: true
+    tty: true
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    depends_on:
+      - api
+
+  api:
+    build: backend
+    environment:
+      - DB_HOST=db
+    ports:
+      - 8000:8000
+    depends_on:
+      - db
+
+networks:
+  web:
+    external:
+      name: host
