--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
-    "react-bootstrap": "^2.2.3", 
-    "bootstrap":"^5.1.3",
-    "react-router-dom":"^6.3.0",
-    "axios":"^0.26.1"
+    "react-bootstrap": "^2.2.3",
+    "bootstrap": "^5.1.3",
+    "react-router-dom": "^6.3.0",
+    "axios": "^0.26.1",
+    "styled-components": "^5.3.5",
+    "react-icons": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
