--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.3.0",
     "axios": "^0.26.1",
     "styled-components": "^5.3.5",
+    "react-dropzone":"^12.0.4",
     "react-icons": "^4.3.1"
   },
   "scripts": {
